# Morent

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  sqlite3.db
.github/workflows/: docker-image.yml
Front-End/public/: index.html
Front-End/src/: App.js  axios.js  index.js  style.scss
Front-End/src/components/AdsCard/: AdsCard.scss
Front-End/src/components/CarItem/: CarItem.jsx  CarItem.scss
Front-End/src/components/Footer/: Footer.scss
Front-End/src/components/Header/: Header.scss
Front-End/src/components/Pagination/: Pagination.jsx
Front-End/src/pages/: Home.jsx  index.js
Front-End/src/pages/About/: About.jsx
FrontEnd/: Dockerfile  package.json
FrontEnd/public/: index.html
FrontEnd/src/: App.css  App.js  axios.js  common.scss  index.js  style.scss
FrontEnd/src/axiosConfigs/: axiosAuthSettings.js  axiosBaseSettings.js
FrontEnd/src/base/: mixins.scss
FrontEnd/src/components/: index.js
FrontEnd/src/pages/: Home.jsx  Home.scss  index.js
FrontEnd/src/redux/: store.js
Morent/: settings.py  urls.py  wsgi.py
core/: admin.py  forms.py  keys.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_car_text_alter_car_inside_photo_one_and_more.py
core/templates/: password_reset_email.html
core/templates/core/: auto.html  base.html  change_user_data.html  index.html  login.html  payment.html  profile.html  register.html
data/db/: postmaster.pid
data/db/global/: 1260  pg_control  pg_internal.init
(+53 files in other folders)
