[tool.poetry]
name = "morent"
version = "0.1.0"
description = ""
authors = ["Qyry <qyryalien@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7.10"
django = "4.2"
amqp = "5.1.1"
asgiref = "3.6.0"
async-timeout = "4.0.2"
billiard = "3.6.4.0"
brotli = "1.0.9"
celery = "5.2.7"
certifi = "2022.12.7"
cffi = "1.15.1"
charset-normalizer = "3.1.0"
click = "8.1.3"
click-didyoumean = "0.3.0"
click-plugins = "1.1.1"
click-repl = "0.2.0"
colorama = "0.4.6"
cryptography = "40.0.2"
decorator = "5.1.1"
django-celery-results = "2.5.1"
django-cors-headers = "3.14.0"
django-debug-toolbar = "4.0.0"
django-environ = "0.10.0"
django-filter = "23.2"
django-rest-passwordreset = "1.3.0"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.2.2"
dynaconf = "3.1.12"
gunicorn = "20.1.0"
hvac = "1.1.0"
idna = "3.4"
kombu = "5.2.4"
loguru = "0.7.0"
pillow = "9.5.0"
prompt-toolkit = "3.0.38"
psycopg2-binary = "2.9.6"
pycparser = "2.21"
pyhcl = "0.4.4"
pyjwt = "2.7.0"
pytz = "2023.3"
redis = "4.5.4"
requests = "2.29.0"
shortuuid = "1.0.11"
six = "1.16.0"
sqlparse = "0.4.4"
tzdata = "2023.3"
urllib3 = "1.26.15"
validators = "0.20.0"
vine = "5.0.0"
wcwidth = "0.2.6"
whitenoise = "6.5.0"
win32-setctime = "1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
